--- a/src/app/demo/components/user-profile/user-profile.component.html
+++ b/src/app/demo/components/user-profile/user-profile.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="container" *ngIf="user; else emptyUser">
   <div class="main-body">
 
@@ -104,3 +105,4 @@
     </div>
   </div>
 </ng-template>
+<app-footer></app-footer>
