fixed my prizes icon

--- a/src/app/demo/components/landing/navbar/navbar.component.html
+++ b/src/app/demo/components/landing/navbar/navbar.component.html
@@ -98,7 +98,7 @@
         <li *ngIf="isSponsor">
             <a [routerLink]="['/sponsor-prizes']" class="dropdown-item flex align-items-center p-3 hover:surface-200 transition-colors transition-duration-150 cursor-pointer"
                (click)="userMenuVisible = false">
-                <i class="pi pi-gift mr-2"></i>
+               <i class="pi pi-tag mr-2"></i>
                 <span>My prizes</span>
             </a>
         </li>
